Création et enregistrement des fichiers pour l'API et le dashboard

--- a/Dossier Code/P7_01_NotebookPreprocessing.ipynb
+++ b/Dossier Code/P7_01_NotebookPreprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2d309b2b",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4796d03b",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9fe1a7a3",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f681c9d7",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "7bfa3bfc",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "afaeadaa",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "380e14a0",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
       "\"Bureau\" shape: (1716428, 17)\n",
       "\"Bureau Balance\" shape: (27299925, 3)\n",
       "\"Bureau/Bureau Balance\" final shape: (305811, 116)\n",
-      "Process bureau and bureau_balance - done in 19s\n"
+      "Process bureau and bureau_balance - done in 12s\n"
      ]
     }
    ],
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c7f18e9f",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
      "text": [
       "\"Previous applications\" shape: (1670214, 37)\n",
       "\"Previous applications\" final shape: (201759, 249)\n",
-      "Process previous_applications - done in 12s\n"
+      "Process previous_applications - done in 9s\n"
      ]
     }
    ],
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "fa08761d",
    "metadata": {},
    "outputs": [
@@ -399,7 +399,7 @@
      "text": [
       "\"Pos-Cash\" shape: (10001358, 8)\n",
       "\"Pos-Cash\" final shape: (337252, 18)\n",
-      "Process POS-CASH balance - done in 8s\n"
+      "Process POS-CASH balance - done in 5s\n"
      ]
     }
    ],
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "f6fd7e80",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
      "text": [
       "\"Installments Payments\" shape: (13605401, 8)\n",
       "\"Installments Payments\" final shape: (339587, 26)\n",
-      "Process installments payments - done in 25s\n"
+      "Process installments payments - done in 19s\n"
      ]
     }
    ],
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "8e743822",
    "metadata": {},
    "outputs": [
@@ -501,7 +501,7 @@
      "text": [
       "\"Credit Card Balance\" shape: (3840312, 23)\n",
       "\"Credit Card Balance\" final shape: (103558, 141)\n",
-      "Process credit card balance - done in 10s\n"
+      "Process credit card balance - done in 8s\n"
      ]
     }
    ],
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "55097604",
    "metadata": {},
    "outputs": [
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "55097604",
    "metadata": {},
    "outputs": [
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "504ef5d2",
    "metadata": {},
    "outputs": [],
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "cba3349c",
    "metadata": {},
    "outputs": [],
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "61ffac3e",
    "metadata": {},
    "outputs": [
@@ -775,7 +775,7 @@
        "[334 rows x 2 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "adcfaa5e",
    "metadata": {},
    "outputs": [
@@ -802,7 +802,7 @@
        "(252133, 517)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "c822e51b",
    "metadata": {},
    "outputs": [],
@@ -979,7 +979,26 @@
     "df_API = X_API_preprocessed.copy()\n",
     "df_API.insert(0,'SK_ID_CURR', df_test['SK_ID_CURR'])\n",
     "\n",
-    "df_API.to_csv('../API/df_API.csv', index=False)"
+    "df_API.to_csv('../df_API.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2452cba3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test.to_csv('../df_dashboard.csv', index=False)\n",
+    "\n",
+    "import joblib\n",
+    "model = joblib.load('Modèles/LGBM.joblib').best_estimator_\n",
+    "df_ = df.copy()\n",
+    "df_[columns_int] = imp_most_frequent.transform(df_[columns_int])\n",
+    "df_[columns_float] = imp_mean.transform(df_[columns_float])\n",
+    "Score = model.predict_proba(df_.loc[:, ~df_.columns.isin(['TARGET', 'SK_ID_CURR'])])[:, 1]\n",
+    "df['Score'] = Score\n",
+    "df.to_csv('../df_comp.csv', index=False)"
    ]
   },
   {
@@ -992,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "e5ae6ea5",
    "metadata": {},
    "outputs": [
@@ -1035,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "2ac0280d",
    "metadata": {},
    "outputs": [
