Modification de l'enregistrement des fichiers pour le dashboard

--- a/Dossier Code/P7_01_NotebookPreprocessing.ipynb
+++ b/Dossier Code/P7_01_NotebookPreprocessing.ipynb
@@ -2,23 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "id": "2d309b2b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\charl\\anaconda3\\lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
-      "c:\\Users\\charl\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.EL2C6PLE4ZYW3ECEVIV3OXXGRN2NRFM2.gfortran-win_amd64.dll\n",
-      "c:\\Users\\charl\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.FB5AE2TYXYH2IJRDKGDGQ3XBKLKTF43H.gfortran-win_amd64.dll\n",
-      "c:\\Users\\charl\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.GK7GX5KEQ4F6UYO3P26ULGBQYHGQO7J4.gfortran-win_amd64.dll\n",
-      "c:\\Users\\charl\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.XWYDX2IKJW2NMTWSFYNGFUWKQU3LYTCZ.gfortran-win_amd64.dll\n",
-      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -43,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "id": "4796d03b",
    "metadata": {},
    "outputs": [],
@@ -66,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "id": "9fe1a7a3",
    "metadata": {},
    "outputs": [],
@@ -91,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "id": "f681c9d7",
    "metadata": {},
    "outputs": [
@@ -134,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "id": "7bfa3bfc",
    "metadata": {},
    "outputs": [
@@ -187,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
    "id": "afaeadaa",
    "metadata": {},
    "outputs": [
@@ -232,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 62,
    "id": "380e14a0",
    "metadata": {},
    "outputs": [
@@ -243,7 +230,7 @@
       "\"Bureau\" shape: (1716428, 17)\n",
       "\"Bureau Balance\" shape: (27299925, 3)\n",
       "\"Bureau/Bureau Balance\" final shape: (305811, 116)\n",
-      "Process bureau and bureau_balance - done in 12s\n"
+      "Process bureau and bureau_balance - done in 17s\n"
      ]
     }
    ],
@@ -315,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 63,
    "id": "c7f18e9f",
    "metadata": {},
    "outputs": [
@@ -325,7 +312,7 @@
      "text": [
       "\"Previous applications\" shape: (1670214, 37)\n",
       "\"Previous applications\" final shape: (201759, 249)\n",
-      "Process previous_applications - done in 9s\n"
+      "Process previous_applications - done in 14s\n"
      ]
     }
    ],
@@ -389,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 64,
    "id": "fa08761d",
    "metadata": {},
    "outputs": [
@@ -399,7 +386,7 @@
      "text": [
       "\"Pos-Cash\" shape: (10001358, 8)\n",
       "\"Pos-Cash\" final shape: (337252, 18)\n",
-      "Process POS-CASH balance - done in 5s\n"
+      "Process POS-CASH balance - done in 8s\n"
      ]
     }
    ],
@@ -432,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 65,
    "id": "f6fd7e80",
    "metadata": {},
    "outputs": [
@@ -442,7 +429,7 @@
      "text": [
       "\"Installments Payments\" shape: (13605401, 8)\n",
       "\"Installments Payments\" final shape: (339587, 26)\n",
-      "Process installments payments - done in 19s\n"
+      "Process installments payments - done in 27s\n"
      ]
     }
    ],
@@ -491,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 66,
    "id": "8e743822",
    "metadata": {},
    "outputs": [
@@ -501,7 +488,7 @@
      "text": [
       "\"Credit Card Balance\" shape: (3840312, 23)\n",
       "\"Credit Card Balance\" final shape: (103558, 141)\n",
-      "Process credit card balance - done in 8s\n"
+      "Process credit card balance - done in 11s\n"
      ]
     }
    ],
@@ -528,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 67,
    "id": "55097604",
    "metadata": {},
    "outputs": [
@@ -559,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "id": "55097604",
    "metadata": {},
    "outputs": [
@@ -594,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 69,
    "id": "504ef5d2",
    "metadata": {},
    "outputs": [],
@@ -622,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 70,
    "id": "cba3349c",
    "metadata": {},
    "outputs": [],
@@ -658,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
    "id": "61ffac3e",
    "metadata": {},
    "outputs": [
@@ -775,7 +762,7 @@
        "[334 rows x 2 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 72,
    "id": "adcfaa5e",
    "metadata": {},
    "outputs": [
@@ -802,7 +789,7 @@
        "(252133, 517)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 73,
    "id": "c822e51b",
    "metadata": {},
    "outputs": [],
@@ -833,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 74,
    "id": "c1b18c87",
    "metadata": {},
    "outputs": [
@@ -843,7 +830,7 @@
        "Counter({1: 21835, 0: 230298})"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 75,
    "id": "7422251e",
    "metadata": {},
    "outputs": [],
@@ -872,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 76,
    "id": "b18322ab",
    "metadata": {},
    "outputs": [],
@@ -887,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 77,
    "id": "2618ca81",
    "metadata": {},
    "outputs": [],
@@ -909,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 78,
    "id": "433440d4",
    "metadata": {},
    "outputs": [],
@@ -937,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 79,
    "id": "d413c1f6",
    "metadata": {},
    "outputs": [],
@@ -958,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 80,
    "id": "462a308d",
    "metadata": {},
    "outputs": [],
@@ -971,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 81,
    "id": "076671f1",
    "metadata": {},
    "outputs": [],
@@ -984,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 82,
    "id": "2452cba3",
    "metadata": {},
    "outputs": [],
@@ -996,9 +983,32 @@
     "df_ = df.copy()\n",
     "df_[columns_int] = imp_most_frequent.transform(df_[columns_int])\n",
     "df_[columns_float] = imp_mean.transform(df_[columns_float])\n",
+    "df_[columns_float] = std_scale_X.transform(df_[columns_float])\n",
+    "\n",
     "Score = model.predict_proba(df_.loc[:, ~df_.columns.isin(['TARGET', 'SK_ID_CURR'])])[:, 1]\n",
     "df['Score'] = Score\n",
     "df.to_csv('../df_comp.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "2e84362f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({0: 21835, 1: 230298})"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Counter(df_['TARGET'])"
    ]
   },
   {
@@ -1011,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "e5ae6ea5",
    "metadata": {},
    "outputs": [
@@ -1054,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "2ac0280d",
    "metadata": {},
    "outputs": [
