Modification du fichier

--- a/Dossier Code/Enregistrement des fichiers.ipynb
+++ b/Dossier Code/Enregistrement des fichiers.ipynb
@@ -110,14 +110,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_dashboard_comp = pd.read_csv('../df_comp.csv')[liste_colonnes2]\n",
-    "N = int(df_dashboard_comp.shape[0]*0.6)\n",
+    "N = int(df_dashboard_comp.shape[0]*0.2)\n",
     "df_comp_lite = df_dashboard_comp.sample(n=N)\n",
     "df_comp_lite.to_csv('../Streamlit/df_comp_lite.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({1: 230298, 0: 21835})\n",
+      "Counter({1: 138257, 0: 13022})\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "print(Counter(df_dashboard_comp['TARGET']))\n",
+    "print(Counter(df_comp_lite['TARGET']))"
    ]
   },
   {
