Modification d'un enregistrement de fichier

--- a/Dossier Code/P7_01_NotebookPreprocessing.ipynb
+++ b/Dossier Code/P7_01_NotebookPreprocessing.ipynb
@@ -16,6 +16,7 @@
     "from contextlib import contextmanager\n",
     "import gc\n",
     "from collections import Counter\n",
+    "import joblib\n",
     "\n",
     "import re\n",
     "\n",
@@ -976,39 +977,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test.to_csv('../df_dashboard.csv', index=False)\n",
+    "#df_test.to_csv('../df_dashboard.csv', index=False)\n",
     "\n",
-    "import joblib\n",
-    "model = joblib.load('Modèles/LGBM.joblib').best_estimator_\n",
-    "df_ = df.copy()\n",
-    "df_[columns_int] = imp_most_frequent.transform(df_[columns_int])\n",
-    "df_[columns_float] = imp_mean.transform(df_[columns_float])\n",
-    "df_[columns_float] = std_scale_X.transform(df_[columns_float])\n",
+    "#model = joblib.load('Modèles/LGBM.joblib').best_estimator_\n",
+    "#df_ = df.copy()\n",
+    "#df_[columns_int] = imp_most_frequent.transform(df_[columns_int])\n",
+    "#df_[columns_float] = imp_mean.transform(df_[columns_float])\n",
+    "#df_[columns_float] = std_scale_X.transform(df_[columns_float])\n",
     "\n",
-    "Score = model.predict_proba(df_.loc[:, ~df_.columns.isin(['TARGET', 'SK_ID_CURR'])])[:, 1]\n",
-    "df['Score'] = Score\n",
-    "df.to_csv('../df_comp.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "2e84362f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Counter({0: 21835, 1: 230298})"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Counter(df_['TARGET'])"
+    "#Score = model.predict_proba(df_.loc[:, ~df_.columns.isin(['TARGET', 'SK_ID_CURR'])])[:, 1]\n",
+    "#df['Score'] = Score\n",
+    "#df.to_csv('../df_comp.csv', index=False)"
    ]
   },
   {
