--- a/Dossier Code/Enregistrement des fichiers.ipynb
+++ b/Dossier Code/Enregistrement des fichiers.ipynb
@@ -2,22 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\charl\\anaconda3\\lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
-      "c:\\Users\\charl\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.EL2C6PLE4ZYW3ECEVIV3OXXGRN2NRFM2.gfortran-win_amd64.dll\n",
-      "c:\\Users\\charl\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.FB5AE2TYXYH2IJRDKGDGQ3XBKLKTF43H.gfortran-win_amd64.dll\n",
-      "c:\\Users\\charl\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.GK7GX5KEQ4F6UYO3P26ULGBQYHGQO7J4.gfortran-win_amd64.dll\n",
-      "c:\\Users\\charl\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.XWYDX2IKJW2NMTWSFYNGFUWKQU3LYTCZ.gfortran-win_amd64.dll\n",
-      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd"
    ]
@@ -32,14 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_API = pd.read_csv('../df_API.csv')\n",
-    "df_API_lite = df_API.sample(n=int(df_API.shape[0]*0.6), random_state=8)\n",
+    "df_API_lite = df_API.sample(n=int(df_API.shape[0]*0.2), random_state=6)\n",
     "df_API_lite.to_csv('../API/df_API_lite.csv', index=False)\n",
-    "df_API_lite.to_csv('../Streamlit/df_API_lite.csv', index=False)"
+    "df_API_lite.to_csv('../Dashboard/df_API_lite.csv', index=False)"
    ]
   },
   {
@@ -52,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +58,7 @@
      "output_type": "stream",
      "text": [
       "(39470, 16)\n",
-      "(23682, 16)\n"
+      "(7894, 16)\n"
      ]
     }
    ],
@@ -84,11 +71,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_dashboard_lite.to_csv('../Streamlit/df_dashboard_lite.csv', index=False)"
+    "df_dashboard_lite.to_csv('../Dashboard/df_dashboard_lite.csv', index=False)"
    ]
   },
   {
@@ -100,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,41 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_dashboard_comp = pd.read_csv('../df_comp.csv')[liste_colonnes2]\n",
     "N = int(df_dashboard_comp.shape[0]*0.2)\n",
     "df_comp_lite = df_dashboard_comp.sample(n=N)\n",
-    "df_comp_lite.to_csv('../Streamlit/df_comp_lite.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Counter({1: 230298, 0: 21835})\n",
-      "Counter({1: 138257, 0: 13022})\n"
-     ]
-    }
-   ],
-   "source": [
-    "from collections import Counter\n",
-    "print(Counter(df_dashboard_comp['TARGET']))\n",
-    "print(Counter(df_comp_lite['TARGET']))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2. bis. Données de test avant preprocessing pour comparaison (avec le score)"
+    "df_comp_lite.to_csv('../Dashboard/df_comp_lite.csv', index=False)"
    ]
   }
  ],
